--- a/report/aaai.sty
+++ b/report/aaai.sty
@@ -1,6 +1,6 @@
 \def\year{2015}
 %
-%Filename: aaai.sty
+%Filename: modified.sty
 %
 \typeout{Conference Style for AAAI for LaTeX 2e -- version of 1 January 2015}
 % WARNING: IF YOU ARE USING THIS STYLE SHEET FOR AN AAAI PUBLICATION, YOU
@@ -115,11 +115,7 @@
 % We're never going to need a table of contents, so just flush it to
 % save space --- suggested by drstrip@sandia-2
 \def\addcontentsline#1#2#3{}
-% gf: PRINT COPYRIGHT NOTICE
-\def\copyright@year{\number\year}
-\def\copyright@text{Copyright \copyright\space \copyright@year,
-Association for the Advancement of Artificial Intelligence (www.aaai.org).
-All rights reserved.}
+
 \def\copyright@on{T}
 \def\nocopyright{\gdef\copyright@on{}}
 \def\copyrighttext#1{\gdef\copyright@on{T}\gdef\copyright@text{#1}}
@@ -230,59 +226,7 @@ Abstract}\vspace{0.5ex}\begin{quote}\small}{\par\end{quote}\vskip 1ex}
 \def\LARGE{\@setfontsize\LARGE\@xivpt{16}}    % 14 point on 16
 \def\huge{\@setfontsize\huge\@xviipt{20}}    % 17 point on 20
 \def\Huge{\@setfontsize\Huge\@xxpt{23}}    % 20 point on 23
-%%%% named style for aaai, included here for ease of use
-% This section implements citations for the ``named'' bibliography style,
-% modified for AAAI use.
-% This file can be modified and used in other conferences as long
-% as credit to the authors and supporting agencies is retained, this notice
-% is not changed, and further modification or reuse is not restricted.
-% The ``named'' bibliography style creates citations with labels like
-% \citeauthoryear{author-info}{year}
-% these labels are processed by the following commands:
-% \cite{keylist}
-%  which produces citations with both author and year,
-%  enclosed in square brackets
-% \shortcite{keylist}
-%  which produces citations with year only,
-%  enclosed in square brackets
-% \citeauthor{key}
-%  which produces the author information only
-% \citeyear{key}
-%  which produces the year information only
-\def\leftcite{(}\def\rightcite{)}
-\def\cite{\def\citeauthoryear##1##2{\def\@thisauthor{##1}%
-\ifx \@lastauthor \@thisauthor \relax \else##1 \fi ##2}\@icite}
-\def\shortcite{\def\citeauthoryear##1##2{##2}\@icite}
-\def\citeauthor{\def\citeauthoryear##1##2{##1}\@nbcite}
-\def\citeyear{\def\citeauthoryear##1##2{##2}\@nbcite}
-% internal macro for citations with () and with breaks between citations
-% used in \cite and \shortcite
-\def\@icite{\leavevmode\def\@citeseppen{-1000}%
-\def\@cite##1##2{\leftcite\nobreak\hskip 0in{##1\if@tempswa , ##2\fi}\rightcite}%
-\@ifnextchar [{\@tempswatrue\@citex}{\@tempswafalse\@citex[]}}
-% internal macro for citations without [] and with no breaks
-% used in \citeauthor and \citeyear
-\def\@nbcite{\leavevmode\def\@citeseppen{1000}%
-\def\@cite##1##2{{##1\if@tempswa , ##2\fi}}%
-\@ifnextchar [{\@tempswatrue\@citex}{\@tempswafalse\@citex[]}}
-% don't box citations, separate with ; and a space
-% also, make the penalty between citations a parameter, 
-% it may be a good place to break
-\def\@citex[#1]#2{%
-\def\@lastauthor{}\def\@citea{}%
-\@cite{\@for\@citeb:=#2\do
-{\@citea\def\@citea{;\penalty\@citeseppen\ }%
-\if@filesw\immediate\write\@auxout{\string\citation{\@citeb}}\fi
-\@ifundefined{b@\@citeb}{\def\@thisauthor{}{\bf ?}\@warning
-{Citation `\@citeb' on page \thepage \space undefined}}%
-{\csname b@\@citeb\endcsname}\let\@lastauthor\@thisauthor}}{#1}}
-%Ignore the key when generating the Reference section.
-\def\@lbibitem[#1]#2{\item\if@filesw 
-{ \def\protect##1{\string ##1\space}\immediate
-\write\@auxout{\string\bibcite{#2}{#1}}}\fi\ignorespaces}
-\def\thebibliography#1{\section*{References\@mkboth
-{REFERENCES}{REFERENCES}}\list
-{}{\labelwidth 0in\leftmargin\labelwidth
+
 %%% DIEGO removed
 %%\advance\leftmargin\labelsep
 %%% END removed
