REPORT: Actually remove copyright notice.

--- a/report/aaai.sty
+++ b/report/aaai.sty
@@ -116,7 +116,7 @@
 % save space --- suggested by drstrip@sandia-2
 \def\addcontentsline#1#2#3{}
 
-\def\copyright@on{T}
+\def\copyright@on{F}
 \def\nocopyright{\gdef\copyright@on{}}
 \def\copyrighttext#1{\gdef\copyright@on{T}\gdef\copyright@text{#1}}
 \def\copyrightyear#1{\gdef\copyright@on{T}\gdef\copyright@year{#1}}
