REPORT: Reword first sentence of 'Related Work' to be clearer.

--- a/report/report.tex
+++ b/report/report.tex
@@ -71,7 +71,7 @@ We then compared the output of each device network to a hold-out set, in order d
 
 %NOTE: Should focus on research relevant to ours. Don't know how much there is.
 %TODO: Should also outline one or two unsupervised approaches.
-As far as we know, no studies of NILM using only information about the activity of each device per timestep, exist.
+During our literature review, we found no other NILM studies which used only the binary on-off indicators of each device along with the aggregated power usage.
 %TODO: Cite all of these
 There have been supervised approaches using the disaggregated energy\cite{Kelly} or energy signatures \cite{Parson} for each device.
 Some unsupervised approaches also exist that only use the aggregated energy of the overall house \cite{Kolter}.
